[package]
name = "test-neon"
version = "0.1.0"
authors = ["maxjeffos"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "test_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
neon = "0.6.0"
rslib = { path="../../rslib" }
serde_json = "1.0.60"
serde = "1.0.118"
serde_derive = "1.0.118"
